--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: My Explorations with LLMs
+title: My Explorations with LLMs in Social Contexts
 listing:
   contents: posts
   sort: date desc
