save some changes

--- a/posts/008_looking_closer/looking_closer.ipynb
+++ b/posts/008_looking_closer/looking_closer.ipynb
@@ -11,7 +11,7 @@
     "title: Looking Closer\n",
     "description: \"More objective analysis on LLM conversations\" \n",
     "author: \"Eric Zou\"\n",
-    "date: \"9/22/2025\"\n",
+    "date: \"9/24/2025\"\n",
     "categories:\n",
     "  - LLMs\n",
     "  - Conversations\n",
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "2c721c3a-2bf0-4406-8bc3-ae948dfc69b4",
    "metadata": {},
    "outputs": [
@@ -402,12 +402,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/bin/python3.12: No module named pip\n"
+      "/usr/bin/python3.12: No module named spacy\n"
      ]
     }
    ],
    "source": [
-    "!python3.12 -m pip --version"
+    "!python3.12 -m spacy download en_core_web_sm"
    ]
   },
   {
