switch YAML cells to raw

--- a/posts/008_looking_closer/looking_closer.ipynb
+++ b/posts/008_looking_closer/looking_closer.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00f2ec12-4f83-4021-beb7-28e6f4236116",
+   "cell_type": "raw",
+   "id": "e283b64d-be7d-4653-8240-e049207e2a9f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---\n",
     "title: Looking Closer\n",
@@ -20,19 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "46301a28-1c30-4ffe-82f2-2da986070a22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TransformerDecoderModel requires ML dependencies. Run 'pip install convokit[llm]' to install them.\n",
-      "UnslothUtteranceSimulatorModel requires ML dependencies. Run 'pip install convokit[llm]' to install them.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# as always, some boilerplate\n",
     "from openai import OpenAI\n",
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "534d4cca-7f07-4351-875c-6a5602e64e02",
    "metadata": {},
    "outputs": [],
@@ -292,7 +281,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "id": "af726197-fc7f-46d6-816b-7ecf5ef19db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "# load transcript from here to pick up where we left off\n",
+    "with open(\"long_conversation.txt\", \"r\") as file:\n",
+    "    transcript = file.read()\n",
+    "\n",
+    "pattern = re.compile(r'(speaker_\\d+):\\n(.*?)(?=\\nspeaker_\\d+:|$)', re.DOTALL)\n",
+    "\n",
+    "matches = pattern.findall(transcript)\n",
+    "\n",
+    "# Display results\n",
+    "conversation = []\n",
+    "for speaker, message in matches:\n",
+    "    message = message.strip().replace('\\n', ' ')\n",
+    "    conversation.append({\n",
+    "        \"name\": speaker,\n",
+    "        \"content\": message,\n",
+    "        \"role\": \"assistant\"\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a352d469-7121-4304-8c00-0a197599388e",
    "metadata": {},
    "outputs": [
@@ -303,33 +319,33 @@
        "\n",
        "Score: 2/10\n",
        "\n",
-       "Verdict: The conversation is highly collaborative.\n",
+       "Verdict: The conversation is distinctly collaborative, with participants building on each other's points and sharing strategies.\n",
        "\n",
-       "Explanation: The speakers acknowledge each other’s perspectives, build on each other's ideas, and share experiences to collectively explore solutions. They ask each other questions and express agreement, such as speaker_2's agreement with speaker_3 or speaker_1's recognition of both speakers' contributions. Their shared goal appears to be enhancing documentation processes, rather than debating for superiority.\n",
+       "Explanation: Speakers frequently express agreement and expand upon each other's ideas, as seen in speaker_2 supporting speaker_3's points and vice versa. Their discussions revolve around mutual challenges and solutions, recognizing each other's contributions positively.\n",
        "\n",
        "**Conclusiveness:**\n",
        "\n",
-       "Score: 1/10\n",
+       "Score: 2/10\n",
        "\n",
-       "Verdict: There is a strong consensus among the speakers.\n",
+       "Verdict: The conversation leans heavily towards consensus, with participants finding common ground and aligning their views on documentation practices.\n",
        "\n",
-       "Explanation: The participants largely agree on the importance of a mixed approach to documentation, combining automated tools and human input. They share strategies and challenges without any significant divergence in opinion. They frequently affirm each other's points and provide complementary solutions, as seen when they discuss the integration of AI and maintaining documentation quality.\n",
+       "Explanation: All speakers articulate similar viewpoints on key topics, such as the balance between code and documentation, and the role of tools like AI and collaborative platforms. Despite different environments (startup, open-source, big tech), they converge on solutions, indicating low divergence.\n",
        "\n",
        "**Speaker Identity:**\n",
        "\n",
-       "Score: 6/10\n",
+       "Score: 7/10\n",
        "\n",
-       "Verdict: There is a moderate diversity in speaker identity.\n",
+       "Verdict: The speakers exhibit distinct identities based on their environments (startup, open-source, big tech), affecting their approaches to documentation.\n",
        "\n",
-       "Explanation: The speakers come from different professional backgrounds: speaker_2 from open source, speaker_3 from a startup, and speaker_1 from a big tech environment. Their methods and focuses differ slightly due to these backgrounds (e.g., speaker_2’s need for community engagement and speaker_3's focus on agility). Despite this, their goals remain similar, and they have overlapping solutions and challenges, like trust in AI tools and embedding feedback into workflow.\n",
+       "Explanation: Each speaker brings a unique perspective influenced by their specific context, such as speaker_3's agility focus in startups, speaker_1's emphasis on comprehensive documentation in big tech, and speaker_2's open-source considerations. However, they share a common interest in documentation improvements.\n",
        "\n",
        "**Speaker Fluidity:**\n",
        "\n",
        "Score: 8/10\n",
        "\n",
-       "Verdict: The speakers maintain consistent perspectives.\n",
+       "Verdict: Speakers maintain consistent stances and identities throughout the conversation, contributing steadily from their perspectives.\n",
        "\n",
-       "Explanation: Each speaker holds consistent viewpoints throughout the conversation. Speaker_2 consistently discusses open-source challenges and community engagement, speaker_3 focuses on agility and AI integration in a startup, and speaker_1 emphasizes the need for comprehensive documentation in big tech. Their perspectives remain steady across different topics discussed, from collaboration tools to feedback loops, reflecting continuity in their professional experiences and challenges."
+       "Explanation: Each speaker consistently integrates their experiences and methodologies into the discussion, reinforcing their individual professional backgrounds. They stick to their respective contexts and offer specific examples (e.g., tools and strategies) relevant to their environments, reflecting consistent roles in the dialogue."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -354,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "id": "f5c3cbe7-c9ca-4ae4-8306-ad5b65bc2dec",
    "metadata": {},
    "outputs": [
@@ -394,25 +410,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2c721c3a-2bf0-4406-8bc3-ae948dfc69b4",
+   "execution_count": 9,
+   "id": "3dae5eea-c015-4b24-be63-b3da41301457",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.12/pty.py:95: DeprecationWarning:\n",
+      "\n",
+      "This process (pid=1347514) is multi-threaded, use of forkpty() may lead to deadlocks in the child.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/bin/python3.12: No module named spacy\n"
+      "Collecting en-core-web-sm==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m  \u001b[33m0:00:01\u001b[0m6m0:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n"
      ]
     }
    ],
    "source": [
-    "!python3.12 -m spacy download en_core_web_sm"
+    "!/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/bin/python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f4cbbb-d22a-4c6c-b3ab-2bc1b134910e",
+   "metadata": {},
+   "source": [
+    "## Politeness/Collaboration\n",
+    "Let's get a coarse measure for politeness given ConvoKit's politeness strategies feature extraction results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "f9c4cde0-e0a4-4428-930a-eb8cf41b7b35",
    "metadata": {},
    "outputs": [
@@ -420,39 +459,148 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Convokit requires a SpaCy model to be installed. Run `python -m spacy download MODEL_NAME` and retry.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Speaker(id: 'speaker_2', vectors: [], meta: ConvoKitMeta({}))\n",
+      "{'counts': [('speaker_2', 8), ('speaker_3', 8), ('speaker_2', 6), ('speaker_3', 7), ('speaker_2', 6), ('speaker_3', 5), ('speaker_2', 6), ('speaker_1', 7), ('speaker_3', 7), ('speaker_2', 6), ('speaker_1', 7), ('speaker_3', 7), ('speaker_2', 8), ('speaker_1', 5), ('speaker_3', 6), ('speaker_2', 6), ('speaker_3', 5), ('speaker_1', 6), ('speaker_3', 6), ('speaker_2', 6), ('speaker_1', 5), ('speaker_2', 5), ('speaker_3', 9), ('speaker_2', 7), ('speaker_3', 5), ('speaker_1', 8), ('speaker_3', 6), ('speaker_1', 7), ('speaker_2', 7), ('speaker_1', 6), ('speaker_3', 9), ('speaker_2', 6)]}\n"
      ]
     }
    ],
    "source": [
     "from convokit import TextParser, PolitenessStrategies\n",
+    "import json\n",
     "\n",
     "# Analyze politeness\n",
     "ps = PolitenessStrategies()\n",
     "parser = TextParser()\n",
-    "corpus = parser.transform(corpus)\n",
-    "corpus = ps.transform(corpus)\n",
+    "text_corpus = parser.transform(corpus)\n",
+    "ps_corpus = ps.transform(text_corpus)\n",
     "\n",
-    "# Access politeness features\n",
-    "for utt in corpus.iter_utterances():\n",
-    "    print(utt.meta['politeness_strategy_features'])"
+    "example_utterance = next(corpus.iter_utterances())\n",
+    "print(example_utterance.speaker)\n",
+    "# print(json.dumps(example_utterance.meta['politeness_strategies'], indent = 4))\n",
+    "\n",
+    "# first (and only) metric for now, count strategies used\n",
+    "def get_politeness_metrics(corpus: Corpus) -> dict[str, int]:\n",
+    "\n",
+    "    def get_strategy_count(utterance):\n",
+    "        utterance_meta = utterance.meta\n",
+    "        speaker_id = utterance.speaker.id\n",
+    "        strategies = utterance.meta['politeness_strategies']\n",
+    "        count = sum(strategies.values())\n",
+    "        return (speaker_id, count)\n",
+    "    \n",
+    "    utterances = corpus.iter_utterances()\n",
+    "    return {\n",
+    "        \"counts\": [get_strategy_count(u) for u in utterances]\n",
+    "    }\n",
+    "\n",
+    "ps_metrics = get_politeness_metrics(ps_corpus)\n",
+    "print(ps_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "92db8b35-e2f4-474a-b81d-04da6b816dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "speaker_2\n",
+      "Utterances: 12\n",
+      "Strategies: 77\n",
+      "Average: 6.417\n",
+      "\n",
+      "speaker_3\n",
+      "Utterances: 12\n",
+      "Strategies: 80\n",
+      "Average: 6.667\n",
+      "\n",
+      "speaker_1\n",
+      "Utterances: 8\n",
+      "Strategies: 51\n",
+      "Average: 6.375\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "totals = {}\n",
+    "for speaker, ct in ps_metrics['counts']:\n",
+    "    if speaker not in totals:\n",
+    "        totals[speaker] = [1, ct]\n",
+    "    else:\n",
+    "        n, tct = totals[speaker]\n",
+    "        totals[speaker] = n + 1, ct + tct\n",
+    "for speaker, (n, tct) in totals.items():\n",
+    "    print(speaker)\n",
+    "    print(\"Utterances:\", n)\n",
+    "    print(\"Strategies:\", tct)\n",
+    "    print(\"Average:\", round(tct / n, 3))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed5c4a0c-156e-4493-9c6b-db496d50fb2d",
+   "metadata": {},
+   "source": [
+    "## Consensus: TF/IDF Similarity\n",
+    "We'll look at consensus overall as the TF/IDF similarity of messages in the conversation, potentially weighting them to make them heavier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ee2a5278-89c1-4570-8754-1524669f7b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ColNormedTfidfTransformer' from 'convokit' (/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/lib/python3.12/site-packages/convokit/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[68], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mconvokit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ColNormedTfidfTransformer\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpairwise\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m cosine_similarity\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ColNormedTfidfTransformer' from 'convokit' (/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/lib/python3.12/site-packages/convokit/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from convokit import ColNormedTfidfTransformer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "\n",
+    "# Step 1: Parse corpus text (if not already done)\n",
+    "parser = TextParser()\n",
+    "tx_corpus = parser.transform(corpus)\n",
+    "\n",
+    "# Step 2: Apply TF-IDF transformer\n",
+    "tfidf = ColNormedTfidfTransformer(input_field=\"text\")\n",
+    "tx_corpus = tfidf.transform(tx_corpus)\n",
+    "\n",
+    "# Step 3: Compute consensus as average pairwise cosine similarity\n",
+    "def compute_consensus(corpus: Corpus) -> float:\n",
+    "    utterances = list(corpus.iter_utterances())\n",
+    "    vectors = [utt.meta['tfidf'] for utt in utterances if 'tfidf' in utt.meta]\n",
+    "\n",
+    "    if len(vectors) < 2:\n",
+    "        return 0.0  # Not enough data to compute consensus\n",
+    "\n",
+    "    matrix = np.vstack(vectors)\n",
+    "    sim_matrix = cosine_similarity(matrix)\n",
+    "\n",
+    "    # Extract upper triangle (excluding diagonal) for pairwise similarities\n",
+    "    n = sim_matrix.shape[0]\n",
+    "    upper_triangle = [sim_matrix[i, j] for i in range(n) for j in range(i+1, n)]\n",
+    "\n",
+    "    return np.mean(upper_triangle)\n",
+    "\n",
+    "# Run it\n",
+    "consensus_score = compute_consensus(tx_corpus)\n",
+    "print(\"Consensus score (TF-IDF similarity):\", consensus_score)\n"
    ]
   }
  ],
@@ -472,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
