--- a/posts/018_book_review_3/book_review_3.ipynb
+++ b/posts/018_book_review_3/book_review_3.ipynb
@@ -5,10 +5,10 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: \"Book Review 6\"\n",
+        "title: \"Book Review 3\"\n",
         "description: \"[Your title here]\"\n",
         "author: \"Eric Zou\"\n",
-        "date: \"10/19/2025\"\n",
+        "date: \"10/5/2025\"\n",
         "categories:\n",
         "  - Review\n",
         "---\n"
@@ -20,15 +20,15 @@
       "source": [
         "## What It's About\n",
         "\n",
-        "TODO: Give a quick overview of the book in a way that future-you will actually remember.\n",
+        "TODO: Outline the core story or thesis of the book.\n",
         "\n",
         "## What I Thought\n",
         "\n",
-        "TODO: Write down the moments where you strongly agreed, strongly disagreed, or felt weirdly conflicted.\n",
+        "TODO: Talk through what worked for you and what didn't, in the same informal tone as the first review.\n",
         "\n",
         "## Reflecting\n",
         "\n",
-        "TODO: End with one concrete way this book might change how you design or evaluate LLM systems.\n"
+        "TODO: Tie this back to how you're thinking about LLMs, people, or technology more broadly.\n"
       ]
     }
   ],
