--- a/posts/030_book_review_5/book_review_5.ipynb
+++ b/posts/030_book_review_5/book_review_5.ipynb
@@ -8,7 +8,7 @@
         "title: \"Book Review 5\"\n",
         "description: \"[Your title here]\"\n",
         "author: \"Eric Zou\"\n",
-        "date: \"10/12/2025\"\n",
+        "date: \"10/19/2025\"\n",
         "categories:\n",
         "  - Review\n",
         "---\n"
@@ -20,15 +20,15 @@
       "source": [
         "## What It's About\n",
         "\n",
-        "TODO: Capture the main ideas or narrative arc.\n",
+        "TODO: Give a quick overview of the book in a way that future-you will actually remember.\n",
         "\n",
         "## What I Thought\n",
         "\n",
-        "TODO: Be honest about pacing, clarity, and how much you actually enjoyed reading it.\n",
+        "TODO: Write down the moments where you strongly agreed, strongly disagreed, or felt weirdly conflicted.\n",
         "\n",
         "## Reflecting\n",
         "\n",
-        "TODO: Pull one or two quotes or ideas that you might want to revisit later in the series.\n"
+        "TODO: End with one concrete way this book might change how you design or evaluate LLM systems.\n"
       ]
     }
   ],
