--- a/posts/024_book_review_4/book_review_4.ipynb
+++ b/posts/024_book_review_4/book_review_4.ipynb
@@ -8,7 +8,7 @@
         "title: \"Book Review 4\"\n",
         "description: \"[Your title here]\"\n",
         "author: \"Eric Zou\"\n",
-        "date: \"10/5/2025\"\n",
+        "date: \"10/12/2025\"\n",
         "categories:\n",
         "  - Review\n",
         "---\n"
@@ -20,15 +20,15 @@
       "source": [
         "## What It's About\n",
         "\n",
-        "TODO: Outline the core story or thesis of the book.\n",
+        "TODO: Capture the main ideas or narrative arc.\n",
         "\n",
         "## What I Thought\n",
         "\n",
-        "TODO: Talk through what worked for you and what didn't, in the same informal tone as the first review.\n",
+        "TODO: Be honest about pacing, clarity, and how much you actually enjoyed reading it.\n",
         "\n",
         "## Reflecting\n",
         "\n",
-        "TODO: Tie this back to how you're thinking about LLMs, people, or technology more broadly.\n"
+        "TODO: Pull one or two quotes or ideas that you might want to revisit later in the series.\n"
       ]
     }
   ],
